--- a/notebooks/view_npz_files.ipynb
+++ b/notebooks/view_npz_files.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "id": "8a588883",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/home/lambouj/anaconda3/envs/brepnet/bin/python\n"
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
+      "c:\\Users\\Flynn\\.conda\\envs\\brepnet\\python.exe\n"
      ]
     }
    ],
@@ -51,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 10,
    "id": "1a0a88eb",
    "metadata": {},
    "outputs": [],
@@ -59,47 +61,25 @@
     "# Here is the path to some example step files for us to convert\n",
     "step_folder = Path(\"./example_files/step_examples\")\n",
     "temp_folder = Path(tempfile.gettempdir())\n",
-    "working = temp_folder / \"brepnet_test_working_dir\"\n",
+    "working = Path(\"./example_files/step_examples/temp_working\")\n",
     "if not working.exists():\n",
     "    working.mkdir()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "id": "acbfe0aa",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "100%|█████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████████| 25/25 [02:51<00:00,  6.85s/it]"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Completed pipeline/extract_feature_data_from_step.py\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Here we generate npz data from step files\n",
-    "extract_brepnet_data_from_step(step_folder, working)"
+    "# extract_brepnet_data_from_step(step_folder, working)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 11,
    "id": "e405436b",
    "metadata": {},
    "outputs": [
@@ -109,8 +89,8 @@
      "text": [
       "Number of step and npz files 25\n",
       "Viewing file\n",
-      "npz data /tmp/brepnet_test_working_dir/30419_d55a0a22_2.npz\n",
-      "STEP data example_files/step_examples/30419_d55a0a22_2.stp\n",
+      "npz data example_files\\step_examples\\temp_working\\134103_d89213ee_0.npz\n",
+      "STEP data example_files\\step_examples\\134103_d89213ee_0.stp\n",
       "Loaded 1 solids\n"
      ]
     }
@@ -148,14 +128,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 24,
    "id": "33dd263f",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "cb662b8ce1814f89b5e74a93a58e4fc5",
+       "model_id": "92317f54d51f455db5dcfcfc74e7a418",
        "version_major": 2,
        "version_minor": 0
       },
@@ -176,7 +156,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 14,
    "id": "15f5dc08",
    "metadata": {},
    "outputs": [
@@ -184,9 +164,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The faces you selected were [101]\n",
-      "Shape of face grids (102, 7, 10, 10)\n",
-      "Shape of selected face grids (1, 7, 10, 10)\n"
+      "Please select some faces to view this demo\n"
      ]
     }
    ],
@@ -221,14 +199,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 15,
    "id": "421ceab5",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "2fc2c2660b514cd0a337271fe23fec6a",
+       "model_id": "ebd1eab0c42340998c1ad1330f1ae704",
        "version_major": 2,
        "version_minor": 0
       },
@@ -262,14 +240,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 16,
    "id": "05ca45e7",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "bfd9bcb67c7e4939955229b3f2a6f664",
+       "model_id": "780949ac7d8b4192af93d5c7aa092493",
        "version_major": 2,
        "version_minor": 0
       },
@@ -317,14 +295,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 17,
    "id": "1822f17a",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "ad121aaa549d40328823f1efd7b5b336",
+       "model_id": "9c5e00d75d884536b00ab5854453bcfd",
        "version_major": 2,
        "version_minor": 0
       },
@@ -353,7 +331,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 18,
    "id": "47dac422",
    "metadata": {},
    "outputs": [
@@ -361,11 +339,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2 selected faces\n",
-      "Face 0: 100\n",
-      "Face 1: 36\n",
-      "Found edges which shares faces\n",
-      "Coedge index 550\n"
+      "Found 0 selected faces\n",
+      "Please select one face and one edge\n"
      ]
     }
    ],
@@ -432,14 +407,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 19,
    "id": "d29aa8fa",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "aa03c1b50311459b970f3e2cc29328d7",
+       "model_id": "75cca2ff5f17492aab1175335084723a",
        "version_major": 2,
        "version_minor": 0
       },
@@ -460,7 +435,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 20,
    "id": "065ad546",
    "metadata": {},
    "outputs": [
@@ -468,11 +443,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Found 2 selected faces\n",
-      "Face 0: 48\n",
-      "Face 1: 100\n",
-      "Found edges which shares faces\n",
-      "Coedge index 258\n"
+      "Found 0 selected faces\n",
+      "Please select one face and one edge\n"
      ]
     }
    ],
@@ -519,14 +491,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 21,
    "id": "c1450b45",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "54e0f13d721a4e79bf4fb2e0e4f7fa0c",
+       "model_id": "50ae8efb356740de8faddb230662aac6",
        "version_major": 2,
        "version_minor": 0
       },
@@ -560,7 +532,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 22,
    "id": "90ca6f7f",
    "metadata": {
     "scrolled": false
@@ -569,7 +541,7 @@
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "48cdad7e2f5741a0ad2014bc60ec2866",
+       "model_id": "9467f033d38a455da5f48142336e6216",
        "version_major": 2,
        "version_minor": 0
       },
@@ -631,7 +603,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
